Changelog for Poi
=================


2.1.1 (unreleased)
------------------

- Fix Unauthorized/"Insufficient Privileges" error under Plone 4.2.


2.1.0 (2012-06-28)
------------------

- completed german translation [jensens]


2.1.0b1 (2012-05-02)
--------------------

- Get rid of all code that still handled old PoiResponses.  If you
  still have those (meaning you were using Poi 1.1.x before this),
  then you must first update to version 2.0.x and run the upgrade
  steps.
  [maurits]

- Add an uninstall method and profile, to clean up a bit more.  In
  addition to what the CMFQuickInstaller does, we remove our catalog
  columns and indexes, our skin layer from the skin selections, and
  our types from the parentMetaTypesNotToQuery in the
  navtree_properties.
  [maurits]

- Refactored all email notifications to templates. This should make it
  easier to customize and translate.
  [maurits]

- Fixed example link for collective changesets.
  [maurits]

- When clicking on the suggested login button, show a popup.
  [maurits]

- Removed htmlrender.py.
  [maurits]

- Refactored the email notifications by creating a page template
  ``browser/poi_mail.pt`` and a css file ``skins/Poi/poi-email.css``
  and using that instead of hardcoded stuff in a python file
  ``htmlrender.py``.
  Fixes http://plone.org/products/poi/issues/251
  [maurits]

- Allow assigning portlets to trackers and issues.
  Fixes http://plone.org/products/poi/issues/250
  [maurits]

- Make sure the issue-info-box does not inherit a 100% width, as is the
  case on plone.org at the moment (6 September 2011), which is far too
  wide for this little box.
  See http://plone.org/products/poi/issues/249
  [Maurits]

- Added MANIFEST.in file so that .mo translation files will be
  included in source distributions (with help from zest.releaser and
  zest.pocompile).
  Refs http://plone.org/products/poi/issues/248
  [maurits]


2.0.2 (2011-04-09)
------------------
