@@ -6,8 +6,8 @@ from collective.watcherlist.watchers import WatcherList
 from persistent import Persistent
 from persistent.list import PersistentList
 from zope.annotation.interfaces import IAnnotations
-from zope.app.container.contained import ObjectAddedEvent
-from zope.app.container.contained import ObjectRemovedEvent
+from zope.lifecycleevent import ObjectAddedEvent
+from zope.lifecycleevent import ObjectRemovedEvent
 from zope.component import adapts
 from zope.event import notify
 from zope.interface import Attribute
